# portainer_api_client

./: .gitignore  README.md  pyproject.toml
src/portainer_api_client/: cli.py  client.py
src/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
src/swagger_client/api/: __init__.py  auth_api.py  backup_api.py  custom_templates_api.py  docker_api.py  edge_api.py  edge_groups_api.py  edge_jobs_api.py  edge_stacks_api.py  edge_templates_api.py  endpoint_groups_api.py  endpoints_api.py  gitops_api.py  helm_api.py  intel_api.py  kubernetes_api.py  ldap_api.py  motd_api.py  rbac_enabled_api.py  registries_api.py  resource_controls_api.py  roles_api.py  settings_api.py  ssl_api.py  stacks_api.py  status_api.py  system_api.py  tags_api.py  team_memberships_api.py  teams_api.py  templates_api.py  upload_api.py  users_api.py  webhooks_api.py  websocket_api.py
src/swagger_client/models/: __init__.py  auth_authenticate_payload.py  auth_authenticate_response.py  auth_oauth_payload.py  backup_backup_payload.py  backup_restore_payload.py  containers_container_gpus_response.py  customtemplates_custom_template_from_file_content_payload.py  customtemplates_custom_template_from_git_repository_payload.py  customtemplates_custom_template_update_payload.py  customtemplates_file_response.py  demo_environment_details.py  edge_registry_credentials.py  edge_stack_payload.py  edgegroups_decorated_edge_group.py  edgegroups_edge_group_create_payload.py  edgegroups_edge_group_update_payload.py  edgejobs_edge_job_create_from_file_content_payload.py  edgejobs_file_response.py  (+195 more)
